# gst-kvazaar

./: .gitignore  AUTHORS  NEWS  README.md  config.h.meson  meson.build  meson_options.txt
src/: gstkvazaarenc.c  gstkvazaarenc.h  meson.build
